# learn_python

./: .gitignore  fast-api.py  longest_common_prefix.py  main.py  merge_sort.py  requirements.txt  serv.js  serv.py
bot/: gpt-bot.py
fastapi/: README.md  main.py  movies.csv  pyproject.toml
